Switch to Getopt::Long module. Fix variables definition (ver, help, VERSION). Fix fault if no extention defined. Add compression for dist target of make.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@12 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -39,4 +39,4 @@ Notes:
 DEPENDENCIES
 
 Requires Perl version 5.004 or later. No other special libraries are
-required, except Image::ExifTool package.
+required, except Image::ExifTool and Getopt::Long packages.
