Fix -comfile in doc part. Add debug() subrountine. Strip '*.ext' parameter to 'ext'.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@16 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Further it sets Orientation EXIF tag to "Horizontal (normal)"
 
 After all this script is adding the commentary:
 
-        - if commentary file provided with -comfile option
+        - if commentary file provided with --comment-file option
 
         - $COMMENTARY is put to UserComment
 
