--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.2  2005/10/17 21:34:52  zeus
+Id keyword is added to renrot file
+
 Revision 1.1  2005/10/17 13:39:38  zeus
-ChangeLog file is added. Its the very begining
+ChangeLog file is added. Its the very begining.
 
