--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 $Log$
+Revision 1.3  2005/11/17 12:02:45  zeus
+Config file support added. Now hardcoded personal details are moved to config file, option -c added. Fixed minor bug when EXIFs are identical in new and old files, renrot wasn't removing temporaty copy
+
 Revision 1.2  2005/10/17 21:34:52  zeus
-Id keyword is added to renrot file
+
+Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
