--- a/README
+++ b/README
@@ -1,22 +1,24 @@
 RUNNING
 
-This script is intended to work ONLY in current directory
-it renames files according the DateTimeOriginal EXIF tag if it's exists
+Renrot is intended to work ONLY in current directory
+
+It renames files according the DateTimeOriginal EXIF tag if it's exists
 than if it isn't, according the FileModifyDate EXIF tag if it's exists
-than if it isn't, the name will be in form YYYYmmddHHMMS-XXXXX.jpeg where
-XXXXX is incrementable suffix to the name YYYYmmddHHMMS.
+than if it isn't, the name will be given according the current timestamp
+and will look as YYYYmmddHHMMS-XXXXX.jpeg where XXXXX is incrementable 
+suffix to the name YYYYmmddHHMMS.
 
-This script rotates file and it's thumbnail, accordingly Orientation EXIF tag.
-if the tag is absent or miss set, than the script allows to rotate the file
-as well as it's thumbnail
+It rotates file and it's thumbnail, accordingly Orientation EXIF tag.
+If the tag is absent or miss set, than the script allows to rotate the file
+as well as it's thumbnail,
 
-Further it sets Orientation EXIF tag to "Horizontal (normal)"
+After all, the script can put the commentary to:
 
-After all this script is adding the commentary:
+	- Commentary tag if commentary file provided with --comment-file option
 
-        - if commentary file provided with --comment-file option
+	- UserComment tag if $COMMENTARY variable set in config file
 
-        - $COMMENTARY is put to UserComment
+Personal data could be specified via XMP tags defined in config file
 
 INSTALLATION
 
