--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.4  2005/11/18 12:54:58  andy
+Add long option --config-file as alias to -c.
+
+
 Revision 1.3  2005/11/17 12:02:45  zeus
 Config file support added. Now hardcoded personal details are moved to config file, option -c added. Fixed minor bug when EXIFs are identical in new and old files, renrot wasn't removing temporaty copy
 
