--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.9  2005/11/19 22:53:31  andy
+Append new files to MANIFEST.
+
 Revision 1.8  2005/11/19 09:45:56  zeus
 Minor script output formating
 
@@ -25,3 +28,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
