Documentation tailored a bit, the info concerning the jpegtran URL is added
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@32 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 $Log$
+Revision 1.10  2006/01/10 12:16:07  zeus
+Documentation tailored a bit, the info concerning the jpegtran URL is added
+
 Revision 1.9  2005/11/19 22:53:31  andy
-Append new files to MANIFEST.
+Append new files to MANIFEST
 
 Revision 1.8  2005/11/19 09:45:56  zeus
 Minor script output formating
