--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 $Log$
+Revision 1.13  2006/04/18 10:22:12  andy
+Added LICENSING part to README.
+Added renrot.spec for RPM-based linux distributions.
+Bump version (0.14.1).
+
 Revision 1.12  2006/04/17 12:57:47  zeus
 README edited
 
@@ -38,4 +43,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
