--- a/README
+++ b/README
@@ -43,3 +43,7 @@ DEPENDENCIES
 
 Requires Perl version 5.6.0 or later. No other special libraries are
 required, except Image::ExifTool and Getopt::Long packages.
+
+LICENSING
+Renrot is an Open Source project distributed under GPL or Artistic
+license.
