--- a/README
+++ b/README
@@ -45,5 +45,11 @@ Requires Perl version 5.6.0 or later. No other special libraries are
 required, except Image::ExifTool and Getopt::Long packages.
 
 LICENSING
+
 Renrot is an Open Source project distributed under GPL or Artistic
 license.
+
+THANKS
+
+ASPLinux company (http://www.asplinux.ru) has included the renrot to
+their distribution.
