--- a/README
+++ b/README
@@ -51,5 +51,8 @@ license.
 
 THANKS
 
+Phil Harvey (http://www.sno.phy.queensu.ca/~phil/exiftool/) 
+for his valued comments and suggestions.
+
 ASPLinux company (http://www.asplinux.ru) has included the renrot to
 their distribution.
