--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 $Log$
+Revision 1.19  2006/04/19 08:55:44  zeus
+code for file names caching for the directory was reingenered, to avoid the
+processing of the processed files ( processed files could be rescanned while
+processing of a big number files in the directory )
+
 Revision 1.18  2006/04/19 07:08:07  zeus
-TODO is added
+TODO is added.
 
 Revision 1.17  2006/04/18 20:10:26  zeus
 Documentation edited.
