WHAT IS IT? and GETTING sections were added to README. Change YYYYmmDDHHMMS to YYYYmmDDHHSS in the documentation and comments. Fix description in spec file according to freshmeat.net.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@45 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 $Log$
+Revision 1.20  2006/04/19 12:24:58  andy
+WHAT IS IT? and GETTING sections were added to README.
+Change YYYYmmDDHHMMS to YYYYmmDDHHSS in the documentation and comments.
+Fix description in spec file according to freshmeat.net.
+
+
 Revision 1.19  2006/04/19 08:55:44  zeus
 code for file names caching for the directory was reingenered, to avoid the
 processing of the processed files ( processed files could be rescanned while
