--- a/README
+++ b/README
@@ -35,6 +35,18 @@ Personal data could be specified via XMP tags defined in config file
 
 Examples:
 
+    renames PICTZZZZ.JPG to sample.YYYYmmDDHHMMSS.XXXX.jpg
+	renrot --name-prefix sample --ext *.JPG
+
+    renames PICTZZZZ.JPG to YYYYmmDDHHMMSS.XXXX.WwwwIiiiAaaaEeeejpg
+	renrot --name-suffix --ext *.JPG
+
+    rotates all files by 90CW
+	renrot --rotate 90 --ext jpg
+
+    rotates thumbnails for all files included to EXIF by 90CCW
+	renrot --rotate-thumb 270 --ext jpg
+
 
 INSTALLATION
 
