--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 $Log$
+Revision 1.24  2006/04/20 08:24:23  zeus
+ISO tag choosen instead of CameraISO, since not all cameras has the last one
+
 Revision 1.23  2006/04/19 20:02:02  zeus
-README section WHAT IS IT edited
+README section WHAT IS IT edited.
 
 Revision 1.22  2006/04/19 16:24:59  andy
 Wrote several examples to README
