README is edited, URL for DEPENDENCIES are added
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@50 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -71,7 +71,10 @@ Notes:
 DEPENDENCIES
 
 Requires Perl version 5.6.0 or later. No other special libraries are
-required, except Image::ExifTool and Getopt::Long packages.
+required, except: 
+Image::ExifTool		http://www.sno.phy.queensu.ca/~phil/exiftool/
+Getopt::Long 		cpan:// (usually, inside in perl distribution)
+jpegtran		http://www.ijg.org/
 
 
 LICENSING
