--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 $Log$
+Revision 1.25  2006/04/20 13:33:01  zeus
+README is edited, URL for DEPENDENCIES are added
+
 Revision 1.24  2006/04/20 08:24:23  zeus
-ISO tag choosen instead of CameraISO, since not all cameras has the last one
+ISO tag choosen instead of CameraISO, since not all cameras has the last one.
 
 Revision 1.23  2006/04/19 20:02:02  zeus
 README section WHAT IS IT edited.
