--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.29  2006/04/22 19:16:01  andy
+New functions: *msg - expand print functionality.
+
 Revision 1.28  2006/04/22 18:16:59  andy
 Add --work-directory option for more functionality.
 
@@ -93,3 +96,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
