Real use --work-directory option. Fix several typos. Don't use double quotes in config file (special symbol issue such as '@' in email).
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@57 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -38,10 +38,10 @@ Personal data could be specified via XMP tags defined in config file
 Examples:
 
     renames PICTZZZZ.JPG to sample.YYYYmmddHHMMSS.XXXX.jpg
-	renrot --name-prefix sample --ext *.JPG
+	renrot --name-prefix sample --ext '*.JPG'
 
     renames PICTZZZZ.JPG to YYYYmmddHHMMSS.XXXX.WwwwIiiiAaaaEeeejpg
-	renrot --name-suffix --ext *.JPG
+	renrot --name-suffix --ext '*.JPG'
 
     rotates all files by 90CW
 	renrot --rotate 90 --ext jpg
