--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 $Log$
+Revision 1.31  2006/04/22 20:26:17  andy
+Real use --work-directory option.
+Fix several typos.
+Don't use double quotes in config file (special symbol issue such as '@' in email).
+
 Revision 1.30  2006/04/22 19:22:40  andy
 Use errmsg() instead of print "ERROR smth."
 
@@ -99,3 +104,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
