--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.32  2006/04/23 08:06:55  andy
+Change die "smth." to ( fatalmsg(), die ).
+
 Revision 1.31  2006/04/22 20:26:17  andy
 Real use --work-directory option.
 Fix several typos.
@@ -104,4 +107,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
