Removing trailing spaces.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@59 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.33  2006/04/23 08:09:35  andy
+Removing trailing spaces.
+
 Revision 1.32  2006/04/23 08:06:55  andy
 Change die "smth." to ( fatalmsg(), die ).
 
@@ -107,3 +110,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
