--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.34  2006/04/23 11:57:45  andy
+Switch to *msg() procedures instead of print "smth.". Print is used only for
+progress indicator.
+
 Revision 1.33  2006/04/23 08:09:35  andy
 Removing trailing spaces.
 
@@ -110,4 +114,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
