--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.36  2006/04/24 07:47:35  andy
+Minor documentation fix.
+
 Revision 1.35  2006/04/23 17:04:36  andy
 Release 0.15.1.
 
@@ -117,4 +120,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
