--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.38  2006/04/26 18:35:01  andy
+Formating inline documentation.
+First implementation of template for file naming.
+
 Revision 1.37  2006/04/26 15:19:58  andy
 README for windows users. Linguistiq fix for README.
 
@@ -123,4 +127,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
