Name template engine tunning. Added suffix for the name in case of the rotation. thanks to Alex Zasypkin added to THANKS section of README
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@66 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -93,3 +93,5 @@ for his valued comments and suggestions.
 
 ASPLinux company (http://www.asplinux.ru) has included renrot to
 their distribution.
+
+Alex Zasypkin for his help with documentation writing.
