--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 $Log$
+Revision 1.43  2006/04/27 16:39:06  andy
+Fix several bugs (script does not run).
+Inject functions name to lead to argument of dbgmsg().
+Probe to use another timestamp algorithm in template2name().
+
 Revision 1.42  2006/04/27 14:31:22  andy
 Fix timestamp for invalid DateTimeOriginal tag (new function
 timeValidator()).
@@ -146,3 +151,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
