--- a/README
+++ b/README
@@ -24,7 +24,7 @@ defined like this:
 - otherwise, if FileModifyDate EXIF tag exists, it is used as the
   picture date
 - otherwise current timestamp is used as the picture date.
-Final file name will look like YYYYmmddHHMMSS-XXXXX.jpg, where XXXXX is
+Final file name will look like YYYYmmddHHMMSS.XXXX.jpg, where XXXX is
 incrementable suffix to the name YYYYmmddHHMMSS.
 
 renrot rotates file and its thumbnail, accordingly to Orientation EXIF
@@ -39,14 +39,8 @@ Personal data could be specified via XMP tags defined in config file
 
 Examples:
 
-    renames PICTZZZZ.JPG to sample.YYYYmmddHHMMSS.XXXX.jpg
-	renrot --name-prefix sample --ext '*.JPG'
-
-    renames PICTZZZZ.JPG to YYYYmmddHHMMSS.XXXX.WwwwIiiiAaaaEeee.jpg
-	renrot --name-suffix --ext '*.JPG'
-
     rotates all files by 90CW
-	renrot --rotate 90 --ext jpg
+	renrot --rotate 90 --ext '*.jpg'
 
     rotates thumbnails for all files included to EXIF by 90CCW
 	renrot --rotate-thumb 270 --ext jpg
