Use regular expression instead of multiple substr(). After our verbosity switch on exiftool's.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@75 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.47  2006/04/27 22:21:28  andy
+Use regular expression instead of multiple substr().
+After our verbosity switch on exiftool's.
+
 Revision 1.46  2006/04/27 21:58:52  andy
 Split template2name() to a two additional functions: getTimestamp() and
 getUnixTime().
@@ -166,3 +170,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
