--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 $Log$
+Revision 1.49  2006/04/30 11:35:07  andy
+Expand documentation accordingly to last code changes (template ideology,
+mtime option, and so on).
+Release as 0.16.
+
 Revision 1.48  2006/04/28 09:53:50  zeus
 getTimestamp conditions reviewed.
 commentaries added where were missed
@@ -174,4 +179,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
